# masters-diploma

c-sharp/: DiplomaProject.sln
c-sharp/DiplomaProject/: DiplomaProject.csproj  Display.cs  PriceForecast.cs  Program.cs  StepFunction.cs  WolframClient.cs  diploma_log.txt  diploma_log1.txt  integration-log.short.txt  results.txt  results1.txt.txt
c-sharp/DiplomaProject.Algorithm/: DiplomaProject.Algorithm.csproj  FunctionWithDerivatives.cs  PriceForecast.cs  StepFunction.cs
c-sharp/DiplomaProject.Algorithm/AlgorithmSteps/: Density.cs  EnumerableExtensions.cs  EulerScheme.cs  FgnFeneration.cs  FifthSixthStep.cs  FourthStep.cs  IntegrationWrapper.cs  SecondStep.cs  StandardWienerProcess.cs  ThirdStep.cs  fg.cs
c-sharp/DiplomaProject.Forecast/: DiplomaProject.Forecast.csproj  Program.cs  density.txt  integration-log.txt
c-sharp/DiplomaProject/AlgorithmSteps/: EnumerableExtensions.cs  EulerScheme.cs  FifthSixthStep.cs  FourthStep.cs  StandardWienerProcess.cs  ThirdStep.cs
cpp/: CMakeLists.txt  compile.sh  integrand_params.cpp  integrand_params.h  job  main.cpp  post_install.sh
gpu/: Pipfile  algorithm.py  fbm_increments.py  forecast.py  gpu_density.py  main.py  plot.py  standard_wiener.py  step_1.py  step_2.py  step_3.py  step_4.py  step_5.py  utils.py
infrastructure/: sandbox-provisioning.yml
infrastructure/roles/calculation/tasks/: main.yml
infrastructure/roles/calculation/vars/: main.yml
