cmake_minimum_required(VERSION 3.15)
project(cpp)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp-simd -Wno-unused-command-line-argument")
add_executable(cpp main.cpp integrand_params.cpp integrand_params.h)
find_package(GSL REQUIRED)
find_package(OpenMP REQUIRED)
find_package(MPI REQUIRED)
include_directories(SYSTEM ${MPI_INCLUDE_PATH})
target_link_libraries(cpp GSL::gsl GSL::gslcblas ${MPI_C_LIBRARIES})